--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,15 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <title> DAHLEN :) </title>
    </head>
-   <body class="bg-dark">
+   <body  class="bg-dark">
       <div class="d-flex bg-dark justify-content-center">
          <div class="row bg-dark absolute-fixed">
-            <input type="submit" id="Submit" value="Submit" form="submit_form"  class="p-4 col-md-4 btn btn-dark">
+            <input type="submit" id="Submit" onclick="Apply_Stats()" value="Submit" form="submit_form"  class="p-4 col-md-4 btn btn-dark">
             <input type="button"  class="p-4 col-md-4 btn btn-dark" value="Switch" id="Switch" >
             <input type="submit" onclick="UpdateDisplay()" disabled="disabled" value="Cycle" id="Cycle" class="p-4 col-md-4 btn btn-dark">
          </div>
       </div>
+      <p></p>
       <div class=" rounded border text-white row d-flex justify-content-center display-3 bg-dark"  id="identity"></div>
       <div class="d-flex justify-content-center" style="display:none !important;") id="cycle_form">
         <p id="confession_display" class="text-white display-5 bg-dar border-left  p-2"></p>
@@ -27,6 +28,26 @@
       </form>
       <p id="confession_items" style="position:absoulte; left: -999em; visibility:hidden !important;">{{ json| tojson | safe }}<p>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script>
+         function get_identity(ip) {
+             var ip = ip.split(".")
+             let base_ip = parseInt(ip.join("6"))
+            // console.log(base_ip)
+             base_ip = base_ip * 5
+            // console.log(base_ip)
+             let shuffled_base = btoa(base_ip)
+             shuffled_base = shuffled_base.substring(0, shuffled_base.length / 2 )
+             document.getElementById("identity").innerHTML = shuffled_base.split().reverse()
+            // document.getElementById("identity_send").value = shuffled_base.split().reverse()
+             return shuffled_base.split().reverse()
+
+         }
+                  $.getJSON("https://api.ipify.org/?format=json", function (e) {
+             get_identity(e.ip);
+             window.identity_made = get_identity(e.ip)
+                      });
+                     
+      </script>
       <script>
          $(function(){
              $('#Switch').click(function() {
@@ -43,44 +64,53 @@
          $('#cycle_form').attr("style", "display:none !important");
          }});});
       </script>
-
+      <script>
+         function Gen_Number(JSONarray){
+               let number = Math.floor(Math.random()*JSONarray.length)
+               localStorage.setItem("Generated_Number", number)
+               number_retrieved = localStorage.getItem("Generated_Number")
+               return number
+            if(number  = number_retrieved){
+               Gen_Number()
+            } else{
+               return number      
+            }}
+      </script>
       <script>
       var myObject = document.getElementById("confession_items").innerHTML
-      JSONarray = []
+      const JSONarray = []
       myObject = JSON.parse(myObject)
 
       length = Object.keys(myObject['entries'])
       length = length.length
-      var myObject = document.getElementById("confession_items").innerHTML = ""
       for (let i = 0; i < length; i++) {
          console.log(i)
          let confession = myObject['entries'][i]["index"]["confession"]
          let identiy = myObject['entries'][i]["index"]["identity"]
          JSONarray.push(confession + " Posted by: " + identiy)
       function UpdateDisplay(){
-         var item = JSONarray[Math.floor(Math.random()*JSONarray.length)];
+         var item = JSONarray[Gen_Number(JSONarray)];
          document.getElementById("confession_display").innerHTML = item
       }}
+      UpdateDisplay()
+      $( "#confession_items" ).remove();
       console.log(JSONarray)
       </script>
-      <script>
-         function get_identity(ip) {
-             var ip = ip.split(".")
-             let base_ip = parseInt(ip.join("6"))
-            // console.log(base_ip)
-             base_ip = base_ip * 5
-            // console.log(base_ip)
-             let shuffled_base = btoa(base_ip)
-             shuffled_base = shuffled_base.substring(0, shuffled_base.length / 2 )
-             document.getElementById("identity").innerHTML = shuffled_base.split().reverse()
-             document.getElementById("identity_send").value = shuffled_base.split().reverse()
+<script>
+   function Apply_Stats() {
+      console.log(identity_made[0])
+      document.getElementById("identity_send").value = identity_made[0]
+   }
+</script>
+<!--
+ <script>
+$( document ).ready(function() {
+   if (window,location.href = 'http://192.168.3.175:5000/submit'){
+window.location.href = "http://192.168.3.175:5000/"}
+});
 
-         }
-         $.getJSON("https://api.ipify.org/?format=json", function(e) {
-             get_identity(e.ip);
-         });
-
-
-      </script>
-   </body>
+ </script>
+ -->
+ 
+      </body>
 </html>
