--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,23 @@
 	<meta name="author" content="Dahlen Bryce">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<style>
+  p span {
+  display: block;
+}
+	.flex-container {
+		display: flex;
+	}
+	
+	.flex-child {
+		flex: 1;
+		border: 2px solid yellow;
+	}
+	
+	.flex-child:first-child {
+		margin-right: 20px;
+	}
+	</style>
 	<title> DAHLEN :) </title>
 </head>
 <body class="bg-dark">
@@ -20,10 +37,10 @@
 	<div id="cust_select" class=" d-flex justify-content-center flex-container bg-darkr">
       <div class="justify-content-center">
          <select name="size" class=" border border-light btn btn-dark dropdown-toggle"  id="size">
-            <option value="display-5">Small</option>
-            <option value="display-4">Medium</option>
-            <option value="diplay-3">Large</option>
-            <option value="display-2">Huge</option>
+            <option value="30px">Small</option>
+            <option value="35px">Medium</option>
+            <option value="45px">Large</option>
+            <option value="50px">Huge</option>
          </select>
       </div>
       <div class="justify-content-center">
@@ -32,7 +49,7 @@
             <option value="blue">Blue</option>
             <option value="red">Red</option>
             <option value="green">Green</option>
-            <option value="yellow">Yellowk</option>
+            <option value="yellow">Yellow</option>
          </select>
       </div>
    </div>
@@ -45,9 +62,8 @@
        </form>
 
    <div class="d-flex justify-content-center" style="display:none !important;" id="cycle_form">
-		<p id="confession_display" class="text-white display-5 bg-dar border-left  p-2"></p>
+		<p id="confession_display" class=" display-5 bg-dar border-left  p-2"></p>
 	</div>
-	<del id="confession_items" style="position:absoulte; left: -999em; visibility:hidden !important;">{{ json| tojson | safe }}</del>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    <script>
 	function get_identity(ip) {
@@ -120,8 +136,13 @@
       console.log(empty)
 		function UpdateDisplay() {
          number_created = Gen_Number(empty)
-			var item =  empty[number_created].confession;
+         var item =  empty[number_created].confession;
+         var size =  empty[number_created].size;
+			var color =  empty[number_created].color;
+         document.getElementById("confession_display").style.color = color
 			document.getElementById("confession_display").innerHTML = item
+         document.getElementById("confession_display").style.fontSize = size
+
 		}
 	}
 	UpdateDisplay()
