--- a/templates/index.html
+++ b/templates/index.html
@@ -6,34 +6,20 @@
 	<meta name="keywords" content="HTML,CS STUDENT,FUN">
 	<meta name="author" content="Dahlen Bryce">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<style>
-  p span {
-  display: block;
-}
-	.flex-container {
-		display: flex;
-	}
-	
-	.flex-child {
-		flex: 1;
-		border: 2px solid yellow;
-	}
-	
-	.flex-child:first-child {
-		margin-right: 20px;
-	}
-	</style>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   <link rel="stylesheet" href="{{url_for('static', filename='assets/css/default.css')}}">
+	<link rel="icon" href="{{url_for('static', filename='assets/images/website-icon.ico')}}">
+
 	<title> DAHLEN :) </title>
 </head>
 <body class="bg-dark">
 	<div class="d-flex bg-dark justify-content-center">
 		<div class="row bg-dark absolute-fixed border border-light">
-			<input type="submit" id="Submit" onclick="Apply_Stats()" value="Submit" form="submit_form" class="border-bottom p-4 col-md-4 btn btn-dark">
+			<input type="submit" id="Submit" onclick="Apply_Stats()" value="Submit" form="submit_form" class="p-4 col-md-4 btn btn-dark">
 			<input type="button" class="p-4 col-md-4 btn btn-dark" value="Switch" id="Switch">
-			<input type="button" onclick="UpdateDisplay()" disabled="disabled" value="Cycle" id="Cycle" class="border-top p-4 col-md-4 btn btn-dark"> </div>
+			<input type="button" onclick="UpdateDisplay()" disabled="disabled" value="Cycle" id="Cycle" class=" p-4 col-md-4 btn btn-dark"> </div>
 	</div>
-	<p class=" rounded border text-white row d-flex justify-content-center display-3 bg-dark " id="identity"></p>
+	<p stlye="padding-top:65px;" class=" p-2 rounded border text-white d-flex justify-content-center display-3 bg-dark " id="identity"></p>
 	<div id="cust_select" class=" d-flex justify-content-center flex-container bg-darkr">
       <div class="justify-content-center">
          <select name="size" class=" border border-light btn btn-dark dropdown-toggle"  id="size">
@@ -54,7 +40,7 @@
       </div>
    </div>
    
-	<form id="submit_form" class=" d-flex bg-dark justify-content-center form-control-md" style="padding-bottom:65px;" action="{{ url_for('submit') }}" method="post">
+	<form id="submit_form" class=" d-flex  justify-content-center form-control-md" style="padding-bottom:65px;" action="{{ url_for('submit') }}" method="post">
       <input type="text" name="confession_send" class="justify-content-center border-bottom"  size="35">
 		<input type="text" name="identity_send"  class="col-sm-12" id="identity_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
       <input type="text" name="size_send"  class="col-sm-12" id="size_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
@@ -64,88 +50,12 @@
    <div class="d-flex justify-content-center" style="display:none !important;" id="cycle_form">
 		<p id="confession_display" class=" display-5 bg-dar border-left  p-2"></p>
 	</div>
+   <script id="for_delete"> let myObject =  '{{ json| tojson | safe }}' </script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   <script>
-	function get_identity(ip) {
-	var ip = ip.split(".")
-	let base_ip = parseInt(ip.join("6"))
-	base_ip = base_ip * 5
-	let shuffled_base = btoa(base_ip)
-	shuffled_base = shuffled_base.substring(0, shuffled_base.length / 2)
-	document.getElementById("identity").innerHTML = shuffled_base.split().reverse()
-	return shuffled_base.split().reverse()
-	}
-	$.getJSON("https://api.ipify.org/?format=json", function(e) {
-	get_identity(e.ip);
-	window.identity_made = get_identity(e.ip)
-	});
-	</script>
-	<script>
-	$(function() {
-	$('#Switch').click(function() {
-	if($("#Cycle").prop("disabled")) {
-	$("#Cycle").prop("disabled", false);
-	$("#Submit").prop("disabled", true);
-	$('#submit_form').attr("style", "display: none !important");
-	$('#cycle_form').attr("style", "visibility: visible !important");
-	$('#cust_select').attr("style", "display: none !important");
-	} else {
-	$("#Cycle").prop("disabled", true);
-	$("#Submit").prop("disabled", false);
-	$('#submit_form').attr("style", "visibility: visible !important");
-	$('#cycle_form').attr("style", "display:none !important");
-	$('#cust_select').attr("style", "visibility: visible !important");
-	}});
-	});
-	</script>
-	<script>
-	function Gen_Number(JSONarray) {
-		let number = Math.floor(Math.random() * JSONarray.length)
-		localStorage.setItem("Generated_Number", number)
-		number_retrieved = localStorage.getItem("Generated_Number")
-		return number
-		if(number = number_retrieved) {
-			Gen_Number()
-		} else {return number}}
-	</script>
-	<script>
-	var myObject =  '{{ json| tojson | safe }}'
-	myObject = JSON.parse(myObject)
-	var length = Object.keys(myObject['entries'])
-	length = length.length
-   let empty = []
-	for(let i = 0; i < length; i++) {
-		console.log(i)
-		let confession = myObject['entries'][i]["index"]["confession"]
-		let identiy = myObject['entries'][i]["index"]["identity"]
-      let size = myObject['entries'][i]["index"]["size"]
-      let color = myObject['entries'][i]["index"]["color"]
-      let confession_complete = confession + " Posted by: " + identiy
-      empty.push({
-         confession: confession_complete,
-         size: size,
-         color: color 
-      });
-      console.log(empty)
-		function UpdateDisplay() {
-         number_created = Gen_Number(empty)
-         var item =  empty[number_created].confession;
-         var size =  empty[number_created].size;
-			var color =  empty[number_created].color;
-         document.getElementById("confession_display").style.color = color
-			document.getElementById("confession_display").innerHTML = item
-         document.getElementById("confession_display").style.fontSize = size
-		}}
-	UpdateDisplay()
-	$("#confession_items").remove();
-	</script>
-	<script>
-	function Apply_Stats() {
-		console.log(identity_made[0])
-		document.getElementById("identity_send").value = identity_made[0]
-      document.getElementById("size_send").value = document.getElementById("size").value
-      document.getElementById("color_send").value = document.getElementById("color").value
-	}
-	</script>
+   <script src="{{url_for('static', filename='assets/javascript/identity_assign.js')}}"></script>
+   <script src="{{url_for('static', filename='assets/javascript/generate_number.js')}}"></script>
+   <script src="{{url_for('static', filename='assets/javascript/switch_input.js')}}"></script>
+   <script src="{{url_for('static', filename='assets/javascript/update_screen.js')}}"></script>
+   <script src="{{url_for('static', filename='assets/javascript/apply_stats.js')}}"></script>
 </body>
 </html>
