--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,19 @@
 
 	<title> DAHLEN :) </title>
 </head>
+
 <body class="bg-dark">
-	<div class="d-flex bg-dark justify-content-center">
+   <hr>
+   <div class="d-flex justify-content-center  bg-dark">
+   <p stlye="padding-top:65px; font-family:monospace;" class="display-5 p-2 rounded border text-white " id="identity"></p>
+	</div>
+   <div class="d-flex bg-dark justify-content-center">
 		<div class="row bg-dark absolute-fixed border border-light">
 			<input type="submit" id="Submit" onclick="Apply_Stats()" value="Submit" form="submit_form" class="p-4 col-md-4 btn btn-dark">
 			<input type="button" class="p-4 col-md-4 btn btn-dark" value="Switch" id="Switch">
 			<input type="button" onclick="UpdateDisplay()" disabled="disabled" value="Cycle" id="Cycle" class=" p-4 col-md-4 btn btn-dark"> </div>
 	</div>
-	<p stlye="padding-top:65px;" class=" p-2 rounded border text-white d-flex justify-content-center display-3 bg-dark " id="identity"></p>
+  <hr class="bg-dark">
 	<div id="cust_select" class=" d-flex justify-content-center flex-container bg-darkr">
       <div class="justify-content-center">
          <select name="size" class=" border border-light btn btn-dark dropdown-toggle"  id="size">
@@ -38,20 +43,31 @@
             <option value="yellow">Yellow</option>
          </select>
       </div>
+      <div class="justify-content-center">
+         <select  class="  border border-light btn btn-dark dropdown-toggle"  id="decoration">
+            <option value="none">None</option>
+            <option value="underline">Underline</option>
+            <option value="overline">Overline</option>
+         </select>
+      </div>
    </div>
    
-	<form id="submit_form" class=" d-flex  justify-content-center form-control-md" style="padding-bottom:65px;" action="{{ url_for('submit') }}" method="post">
+	<form id="submit_form" class=" d-flex  justify-content-center form-control-md border-dark rounded" style="padding-bottom:65px;" action="{{ url_for('submit') }}" method="post">
       <input type="text" name="confession_send" class="justify-content-center border-bottom"  size="35">
 		<input type="text" name="identity_send"  class="col-sm-12" id="identity_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
       <input type="text" name="size_send"  class="col-sm-12" id="size_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
       <input type="text" name="color_send"  class="col-sm-12" id="color_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
-       </form>
+      <input type="text" name="decoration_send"  class="col-sm-12" id="decoration_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
+      <input type="text" name="time_send"  class="col-sm-12" id="time_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
 
+   </form>
+   <p class=" display-5 bg-dar border-left  p-2 text-white" style="display:none !important;" id="confession_info"></p>
    <div class="d-flex justify-content-center" style="display:none !important;" id="cycle_form">
-		<p id="confession_display" class=" display-5 bg-dar border-left  p-2"></p>
+		<p id="confession_display" class=" display-5 bg-dar   p-2"></p>
 	</div>
    <script id="for_delete"> let myObject =  '{{ json| tojson | safe }}' </script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="{{url_for('static', filename='assets/javascript/get_time.js')}}"></script>
    <script src="{{url_for('static', filename='assets/javascript/identity_assign.js')}}"></script>
    <script src="{{url_for('static', filename='assets/javascript/generate_number.js')}}"></script>
    <script src="{{url_for('static', filename='assets/javascript/switch_input.js')}}"></script>
