--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,10 @@
 </head>
 
 <body class="bg-dark">
-   <hr>
+   <div stlye="font-family:monospace;">
+   <div class="d-flex justify-content-center">
+   <hr class="bg-dark hr1">
+</div>
    <div class="d-flex justify-content-center  bg-dark">
    <p stlye="padding-top:65px; font-family:monospace;" class="display-5 p-2 rounded border text-white " id="identity"></p>
 	</div>
@@ -22,10 +25,14 @@
 		<div class="row bg-dark absolute-fixed border border-light">
 			<input type="submit" id="Submit" onclick="Apply_Stats()" value="Submit" form="submit_form" class="p-4 col-md-4 btn btn-dark">
 			<input type="button" class="p-4 col-md-4 btn btn-dark" value="Switch" id="Switch">
-			<input type="button" onclick="UpdateDisplay()" disabled="disabled" value="Cycle" id="Cycle" class=" p-4 col-md-4 btn btn-dark"> </div>
+			<input type="button" onclick="Cycle();UpdateDisplay()" disabled="disabled" value="Cycle" id="Cycle" class=" p-4 col-md-4 btn btn-dark"> </div>
 	</div>
-  <hr class="bg-dark">
-	<div id="cust_select" class=" d-flex justify-content-center  bg-darkr">
+   <div class="d-flex justify-content-center">
+      <hr class="bg-dark hr2">
+       </div>
+</div>
+
+  <div id="cust_select" class=" d-flex justify-content-center  bg-darkr">
       <div class="justify-content-center">
          <select name="size" class=" p-3 border border-light btn btn-dark dropdown-toggle"  id="size">
             <option value="30px">Small</option>
@@ -53,7 +60,7 @@
    </div>
    <span class="p-2"></span>
 	<form id="submit_form" class=" d-flex  justify-content-center form-control-md border-dark rounded" style="padding-bottom:65px;" action="{{ url_for('submit') }}" method="post">
-      <input type="text" name="confession_send" class="justify-content-center border-bottom shadow-textarea"  size="35">
+      <input type="text" name="confession_send" class="justify-content-center border-bottom shadow-textarea rep_text"  size="35">
 		<input type="text" name="identity_send"  class="col-sm-12" id="identity_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
       <input type="text" name="size_send"  class="col-sm-12" id="size_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
       <input type="text" name="color_send"  class="col-sm-12" id="color_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
@@ -61,19 +68,30 @@
       <input type="text" name="time_send"  class="col-sm-12" id="time_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;">
 
    </form>
-   <div > 
-   <p class=" display-5 bg-dar border-left d-flex justify-content-center p-2 text-white" style="display:none !important;" id="confession_info"></p>
+   <div class="d-flex justify-content-center" style="visibility:hidden !important;" id="all_posts">
+  <button class="p-3 border border-light col-md-4 btn btn-dark" onclick="Get_All_Posts(current_identity)">Get All Posts From This User</button>
+  </div>
+  <span class="p-2"></span>
+
+   <div id="total_display"> 
+   <p class=" display-5 bg-dar border-light rounded border d-flex justify-content-center p-2 text-white" style="display:none !important;" id="confession_info"></p>
    <div class="d-flex justify-content-center" style="display:none !important;" id="cycle_form">
 		<p id="confession_display" class=" display-5 bg-dar   p-2"></p>
 	</div>
    </div>
+   <div>
+      <div id="confession_all"> </div>
+   </div>
+
    <script id="for_delete"> let myObject =  '{{ json| tojson | safe }}' </script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="{{url_for('static', filename='assets/javascript/generate_number.js')}}"></script>
+   <script src="{{url_for('static', filename='assets/javascript/update_screen.js')}}"></script>
    <script src="{{url_for('static', filename='assets/javascript/get_time.js')}}"></script>
    <script src="{{url_for('static', filename='assets/javascript/identity_assign.js')}}"></script>
-   <script src="{{url_for('static', filename='assets/javascript/generate_number.js')}}"></script>
    <script src="{{url_for('static', filename='assets/javascript/switch_input.js')}}"></script>
-   <script src="{{url_for('static', filename='assets/javascript/update_screen.js')}}"></script>
    <script src="{{url_for('static', filename='assets/javascript/apply_stats.js')}}"></script>
+   <script src="{{url_for('static', filename='assets/javascript/get_all_posts.js')}}"></script>
+
 </body>
 </html>
