--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
       <div id="confession_all" style="visibility: visible  !important"></div>
    </div>
  
-   
+   <script id="for_delete"> let myObject =  '{{ json| tojson | safe }}' </script>
    <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    <script src="/static/assets/javascript/switch_input.js"></script>
