--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
       </div>
    </div>
    <span class="p-2"></span>
-	<form id="form" class=" d-flex  justify-content-center form-control-md border-dark rounded" style="padding-bottom:65px;" action="/submit" method="post">
+	<form id="form" class=" d-flex  justify-content-center form-control-md border-dark rounded" style="padding-bottom:65px;" onsubmit="check_req()" action="/submit" method="post">
       <input type="text" name="confession_send" class="justify-content-center border-bottom shadow-textarea rep_text" id="confession_input" size="35">
 		<input type="text" name="identity_send" class="col-sm-12" id="identity_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
       <input type="text" name="size_send" class="col-sm-12" id="size_send" style="visibility:hidden !important;  position: absolute; left: -999em;  width:0px; height:0px;"> 
