--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,8 @@
    <script src="/static/assets/javascript/apply_stats.js"></script>
    <script src="/static/assets/javascript/get_all_posts.js"></script>
    <script src="/static/assets/javascript/check_sim.js"></script>
+   <script src="/static/assets/javascript/check_req.js"></script>
+
 
 </body>
 </html>
